<resources>
    <string name="chose_your_game">Chose your game</string>
    <string name="all_matches">All matches</string>
    <string name="search">Search</string>
    <string name="hand_picks">Hand picks</string>
    <string name="latest">Latest</string>
    <string name="related_videos">Related videos</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="result">Result</string>
    <string name="today">Today</string>
    <string name="schedule">Schedule</string>
    <string name="app_name" translatable="false">Score Pro</string>
    <string name="account_email" translatable="false">xinyu.dev778@gmail.com</string>
    <string name="match_highlights">Match Highlights</string>
    <string name="highlights">Highlights</string>
    <string name="see_all">See All</string>
    <string name="latest_videos">Latest Videos</string>
    <string name="titledateSeperator">||||</string>
    <string name="ranking">Ranking</string>
    <string name="team_name">Team Name</string>
    <string name="match_played">MP</string>
    <string name="win">W</string>
    <string name="draw">D</string>
    <string name="loss">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="pts">PTs</string>
    <string name="rank">Rank</string>
    <string name="goals">Goals</string>
    <string name="home_goals">Home</string>
    <string name="away">Away</string>
    <string name="more">More</string>
    <string name="team_standing">Team Standings</string>
    <string name="player_standing">Player Standings</string>
    <string name="live_sports_scores_and_live_match_broadcast">Live Sports Scores and Live match broadcast</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="tnc_check">By creating an account you have agreed to our terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_create_account">Or Create Account</string>
    <string name="log_in">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_detail">Enter your details below and sign up for free</string>
    <string name="otp">OTP</string>
    <string name="one_time_password_otp">One Time Password (OTP)</string>
    <string name="name">Name</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="app_pref_name">sports_app</string>
    <string name="index">Index</string>
    <string name="analysis">Analysis</string>
    <string name="league">League</string>
    <string name="event">Event</string>
    <string name="briefing">Briefing</string>
    <string name="animation">Animation</string>
    <string name="soon">Soon</string>
    <string name="company">Company</string>
    <string name="home">Home</string>
    <string name="live_handicap">Live Handicap</string>
    <string name="init_handicap">Init. Handicap</string>
    <string name="head_to_head">Head to head</string>
    <string name="home_team_recent_record">Home Team Recent Matches</string>
    <string name="away_team_recent">Away Team Recent Matches</string>
    <string name="total_full_time">Total (Full Time)</string>
    <string name="round">Round</string>
    <string name="percenty">%</string>
    <string name="over">OVER</string>
    <string name="under">UNDER</string>
    <string name="home_odds">Home Team Odds</string>
    <string name="total_fulltime">Total (Full Time)</string>
    <string name="home_fulltime">Home (Full Time)</string>
    <string name="away_fulltime">Away (Full Time)</string>
    <string name="total_halftime">Total (Half Time)</string>
    <string name="home_halftime">Home (Half Time)</string>
    <string name="away_halftime">Away (Half Time)</string>
    <string name="away_odds">Away Team Odds</string>
    <string name="goals_and_assists">Goals and assists</string>
    <string name="fouls">Fouls</string>
    <string name="subs">Substitutions</string>
    <string name="channel_name">notification_channel</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="full_name">Full Name:</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="type">Type:</string>
    <string name="current_sub_league">Current Sub-League:</string>
    <string name="total_rounds">Total Rounds:</string>
    <string name="current_round">Current Round:</string>
    <string name="current_season">Current Season:</string>
    <string name="country">Country:</string>
    <string name="rules">Rules:</string>
    <string name="no_info_yet">No info yet</string>
    <string name="league_cup_info">League / Cup Information</string>
    <string name="league_standings">League Standings</string>
    <string name="search_here">Search for matches here</string>
    <string name="loading_please_wait">Loading, Please wait</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_to_highlights">Add to Highlights</string>
    <string name="pin_live_score">Pin Live Score</string>
    <string name="all">All</string>
    <string name="live">Live</string>
    <string name="ft">FT</string>
    <string name="other">Other</string>
    <string name="soccer">Soccer</string>
    <string name="basketball">Basketball</string>
    <string name="full_handicap">Full Handicap</string>
    <string name="half_handicap">Half Handicap</string>
    <string name="onepart_handicap">1Part Handicap</string>
    <string name="total_points">Total Points</string>
    <string name="half">Half</string>
    <string name="description">Description</string>
    <string name="coonfidence_heading">Confidence Index</string>
    <string name="match_track_heading">Match Track</string>
    <string name="latest_five_games_heading">Latest Five Games</string>
    <string name="win_lose">Win/Lose</string>
    <string name="premiere_league_string">English Premier League</string>
    <string name="la_liga_string">La Liga</string>
    <string name="serie_a_string">Serie A</string>
    <string name="bundesliga_string">Bundesliga</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="chinese_super_league_string">Chinese Super League</string>
    <string name="afc_champions_league_string">AFC Champions League</string>
    <string name="asian_qual_string">Asian Qualifiers</string>
    <string name="south_amer_qual_string">South American Qualifier</string>
    <string name="european_qualifier_string">European Qualifier</string>
    <string name="world_cup_string">"World Cup "</string>
    <string name="european_cup_string">European Cup</string>
    <string name="confederation_cup">Confederation Cup</string>
    <string name="americas_cup">Americas Cup</string>
    <string name="loading_league_info_please_wait">Loading League Info, Please Wait</string>
    <string name="title_activity_drawer_test">drawerTestAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="exit_app">Exit App</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="indonesian">Indonesian</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="thai_lang">Thai Language</string>
    <string name="skip">Skip</string>
    <string name="welcome">Welcome!</string>
    <string name="next">Next</string>
    <string name="onboarding_body_1">Jump into the action with our 24/7 coverage of the world\'s most popular sports! Don\'t miss a heartbeat as your favourite teams take the field and cheer them on to victory. You\'ll find everything from fixtures to predictions, player swaps, live coverage and more at 775Sports.</string>
    <string name="football">Football</string>
    <string name="live_score_update">Live Score Update</string>
    <string name="match_statistics">Match Statistics</string>
    <string name="experince_the_app">Experince the App</string>
    <string name="onboarding_body_2">As it happens! Follow the latest in the world of football from fixtures, to player stats and everything in between. See who the gods of football are smiling on with our expert analyses and how the odds are stacked for and agaist the teams.</string>
    <string name="onboarding_body_3">Weather its NBA or any other basketball league, we will keep you updated with all the coming matches and results</string>
    <string name="onboarding_body_4">As it happens! No more waiting for you! Follow live score updates as they happen for your favourite sports. Let\'s see if we can\'t make you feel like you\'re in the stadium. Just remember not to wake the neighbours with your cheering!</string>
    <string name="onboarding_body_5">Detail match analysis and statistics, goals scores, past results, future fixtures, fouls each and every major and minor statistics for every game are available</string>
    <string name="onboarding_body_6">It isn\'t just an app, it\'s an experience. Join in the fun and gain access to over 1000 sports competitions worldwide. See how your dream team stacks agains the competition and gain meaningful insights through our analyses and predictions. Come along with us, and you\'re in for a ride.</string>
    <string name="news">News</string>
    <string name="standings">Standings</string>
    <string name="all_leagues">All Leagues</string>
    <string name="today_matches">Today Matches</string>
    <string name="prev_matches">Previous Matches</string>
    <string name="future_matches">Future Matches</string>
    <string name="news_articles">News Articles</string>
    <string name="vid_clips">Video Clips</string>
    <string name="recommended_videos">Recommended Videos</string>
    <string name="trending">Trending</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="last_6_matches">Last 6 Matches</string>
    <string name="player_name">Player Name</string>
    <string name="goal">Goal</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="penalty_kick">Penalty Kick</string>
    <string name="own_goal">Own Goal</string>
    <string name="two_y_to_red">Two Yellow to Red</string>
    <string name="substitution">Substitution</string>
    <string name="missed_pen">Missed Penalty</string>
    <string name="raw">Other Event</string>
    <string name="tee_off_first">Tee off First</string>
    <string name="first_corner_kic">First Corner Kick</string>
    <string name="first_yellow">First Yellow Card</string>
    <string name="number_of_shots">Number of Shots</string>
    <string name="shots_on_tarhet">Number of Shots on target</string>
    <string name="exit_app_text">Are you sure you want to close application?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
</resources>