<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_primary"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/right_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.56"
        android:layout_height="@dimen/_35sdp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/match_played"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/win"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/draw"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/loss"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/gf"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ga"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/pts"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="more"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_height="match_parent"/>

    </LinearLayout>
<LinearLayout
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="0dp"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/right_layout"
    android:layout_height="0dp">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="40"
        android:text="@string/ranking"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_width="0dp"
        android:textSize="12sp"
        android:layout_weight="60"
        android:text="@string/team_name"
        android:layout_height="match_parent"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>