<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/headings"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/over_white_light_grey"
        android:orientation="horizontal"
        android:layout_height="@dimen/_30sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="@string/company"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/home"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/full_handicap"
            android:textStyle="bold"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/away"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/home"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/half_handicap"
            android:textStyle="bold"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/away"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/home"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>
     <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/onepart_handicap"
             android:ellipsize="end"
         android:maxLines="2"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingHorizontal="@dimen/_1sdp"
            android:textSize="11sp"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/headings"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/odds_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headings" />
</androidx.constraintlayout.widget.ConstraintLayout>