<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#A9000000">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/exit_heading"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/exit_app"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/exit_app_text"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exit_heading" />

            <TextView
                android:id="@+id/yes_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/exit_text"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/red_ring_rect"
                app:layout_constraintStart_toStartOf="@+id/exit_text"
                android:backgroundTint="@color/colorPrimary"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/exit_text" />
            <TextView
                android:id="@+id/no_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/no"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/exit_text"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/red_ring_rect"
                app:layout_constraintStart_toStartOf="@+id/exit_text"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/yes_bt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>